[gd_scene load_steps=18 format=2]

[ext_resource path="res://Prefabs/Player/scripts/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Player/scripts/CameraControls.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Player/scripts/Head.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/Player/scripts/GunHand.gd" type="Script" id=4]
[ext_resource path="res://Assets/Audio/SFX/Player_Flight.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/SFX/TetherGun_Hooked.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/SFX/TetherGun_NoSurface.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/SFX/TetherGun_Unhooked.wav" type="AudioStream" id=8]
[ext_resource path="res://Prefabs/Player/PlayerFoley.gd" type="Script" id=9]
[ext_resource path="res://Assets/Audio/SFX/Player_Fst_Concreate1.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Audio/SFX/Player_Fst_Concreate2.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/Audio/SFX/Player_Fst_Concreate3.wav" type="AudioStream" id=14]
[ext_resource path="res://Assets/Audio/SFX/Player_Fst_Concreate4.wav" type="AudioStream" id=15]

[sub_resource type="CapsuleShape" id=1]
margin = 0.001
radius = 0.25

[sub_resource type="CapsuleShape" id=2]
margin = 0.001
radius = 0.25
height = 0.5

[sub_resource type="SphereMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 0.843137, 0, 0.501961 )

[node name="PlayerRoot" type="Spatial"]
physics_interpolation_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )

[node name="PlayerController" type="KinematicBody" parent="."]
collision_mask = 6
script = ExtResource( 1 )

[node name="StandingCollider" type="CollisionShape" parent="PlayerController"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CrouchingCollider" type="CollisionShape" parent="PlayerController"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.25, 0 )
shape = SubResource( 2 )
disabled = true

[node name="GroundCheck" type="RayCast" parent="PlayerController"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
enabled = true
cast_to = Vector3( 0, -0.35, 0 )
collision_mask = 2

[node name="OverheadDetector" type="RayCast" parent="PlayerController"]
enabled = true
cast_to = Vector3( 0, 0.75, 0 )
collision_mask = 3

[node name="CoyoteTimer" type="Timer" parent="PlayerController"]
one_shot = true

[node name="WallDetector" type="RayCast" parent="PlayerController"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0 )
cast_to = Vector3( 0, 0, -1 )
collision_mask = 2

[node name="StepDetector" type="RayCast" parent="PlayerController/WallDetector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 2

[node name="HeadTarget" type="Spatial" parent="PlayerController"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
script = ExtResource( 2 )

[node name="GunHand" type="Spatial" parent="PlayerController/HeadTarget"]
script = ExtResource( 4 )

[node name="TetherRay" type="RayCast" parent="PlayerController/HeadTarget/GunHand"]
enabled = true
cast_to = Vector3( 0, 0, -25 )
collision_mask = 2

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
current = true
fov = 100.0
far = 250.0
script = ExtResource( 3 )

[node name="TetherCursor" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.04574 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="PlayerFoley" type="Spatial" parent="."]
script = ExtResource( 9 )

[node name="PlayerAir" type="AudioStreamPlayer" parent="PlayerFoley"]
stream = ExtResource( 5 )

[node name="PlayerTetherHooked" type="AudioStreamPlayer" parent="PlayerFoley"]
stream = ExtResource( 6 )

[node name="PlayerTetherUnhooked" type="AudioStreamPlayer" parent="PlayerFoley"]
stream = ExtResource( 8 )

[node name="PlayerTetherNoSurface" type="AudioStreamPlayer" parent="PlayerFoley"]
stream = ExtResource( 7 )

[node name="Footstep1" type="AudioStreamPlayer" parent="PlayerFoley"]
stream = ExtResource( 12 )

[node name="Footstep2" type="AudioStreamPlayer" parent="PlayerFoley"]
stream = ExtResource( 13 )

[node name="Footstep3" type="AudioStreamPlayer" parent="PlayerFoley"]
stream = ExtResource( 14 )

[node name="Footstep4" type="AudioStreamPlayer" parent="PlayerFoley"]
stream = ExtResource( 15 )
